# explainableACD

./: .gitattributes  CLAUDE.md  README.md  mlflow.db  pyproject.toml  streaming_bertopic.py
claim_checkworthiness/: .gitignore  README.md  pyproject.toml
claim_checkworthiness/baml_src/: checkworthiness.baml
claim_checkworthiness/prompts/: checkworthiness_prompts_zeroshot_v4.yaml
claim_checkworthiness/scripts/analysis/: analyze_classifier_errors.py  analyze_ct24_errors.py  analyze_ct24_errors_gpt.py  analyze_deberta_errors.py  analyze_embeddings_pca.py  analyze_ensemble_errors.py  analyze_errors_for_augmentation.py  analyze_fp_fn.py  create_validation_plots.py  deep_stats_analysis.py  diagnose_dev_test_gap.py  explain_with_shap.py  get_deberta_train_dev_errors.py  interpret_pca_dimensions.py  show_devtest_errors.py
claim_checkworthiness/scripts/data_processing/: create_augmented_dataset.py  create_chronological_subsets.py  create_targeted_augmentation.py  csv_basic_stats.py  ct24_classifier_core.py  generate_synthetic_data.py  prepare_ct24_for_classifier.py  prepare_v5_dataset.py  validate_synthetic_hardness.py
claim_checkworthiness/scripts/ensemble/: ensemble_mixed_architectures.py
claim_checkworthiness/scripts/evaluation/: compare_models_ct24.py  evaluate_claimbuster_fusion.py  evaluate_deberta_claimbuster.py  evaluate_deberta_ct23.py  evaluate_deberta_devtest.py  evaluate_qwen_finetuned.py  verify_final_models.py
claim_checkworthiness/scripts/feature_engineering/: combine_deberta_llm_features.py  extract_text_features.py  generate_benchmark_llm_features.py  generate_deberta_embeddings.py  generate_embeddings.py  reduce_ct24_embeddings.py
claim_checkworthiness/scripts/finetuning/: finetune_deberta_augmented.py  finetune_deberta_mtl_learned.py  finetune_deberta_mtl_simple.py  finetune_deberta_mtl_v2.py  finetune_together.py  train_classifier.py  train_embedding_classifiers.py  train_v4_classifier.py
claim_checkworthiness/scripts/hyperparameter_tuning/: combined_greedy_search.py  fast_grid_search.py  feature_ablation_study.py  full_feature_grid_search.py  greedy_feature_search_v4.py  llm_feature_grid_search.py  optimize_feature_combination.py  optimize_threshold.py  preliminary_sweep.py
claim_checkworthiness/scripts/runners/: run_checkworthiness_baseline.py  run_ct24_classifier.py  run_ct24_classifier_pca.py  run_ensemble_experiment.py  run_llm_checkworthiness_v4.py  score_claims_checkworthiness.py
claim_checkworthiness/scripts/utilities/: check_grok_reasoning_content.py  show_grok_logprobs.py  test_deepseek_logprobs.py  test_deepseek_logprobs_detailed.py  test_fewshot_retrieval.py  test_grok_api.py  test_grok_reasoning_comprehensive.py  test_grok_reasoning_final.py  test_grok_reasoning_focused.py  test_grok_reasoning_mode.py  test_normalized_claim_embeddings.py  verify_deepseek_reasoning_content.py  verify_logprobs.py
claim_checkworthiness/src/: __init__.py
claim_checkworthiness/src/checkworthiness/: metrics.py  predictor.py
claim_norm/: README.md
claim_norm/scripts/: run_claim_normalization_ct25.py
claim_normalization_published/: README.md
claim_normalization_published/scripts/: run_claim_normalization_ct25.py
data/raw/: tweets_ai.csv  tweets_ai.parquet
design-log/: design_approaches_2026-01-17_Sergio.md
experiments/.cache/: docs.txt  pipeline_meta.json  pipeline_state.joblib
experiments/configs/: config.py  streaming_config.yaml  streaming_config_quick.yaml
experiments/scripts/: README.md  REVIEW_PROMPT.md  analyze_classifier_errors.py  analyze_ct24_errors.py  analyze_ct24_errors_gpt.py  analyze_phase7_preview.py  analyze_temporal_clusters.py  analyze_temporal_distribution.py  clean_ct24_baseline.py  clean_dataset_phase1.py  clean_dataset_phase2.py  clean_dataset_phase3.py  clean_dataset_phase4.py  clean_dataset_phase5.py  clean_dataset_phase6.py  clean_dataset_phase7.py  clean_dataset_phase8.py  clean_dataset_phase9.py  combined_feature_grid_search.py  compare_fewshot_models.py  compare_models_ct24.py  convert_csv_to_parquet.py  create_subsets.py  (+71 more)
notebooks/: explore_topics.py
prompts/: Checkworthiness Prompts.txt  checkworthiness_prompts.yaml  checkworthiness_prompts_zeroshot.yaml  checkworthiness_prompts_zeroshot_v2.yaml  checkworthiness_prompts_zeroshot_v3.yaml  checkworthiness_prompts_zeroshot_v5.yaml  checkworthiness_qwen.yaml  synthetic_generation_prompts.yaml
(+95 files in other folders)
