[project]
name = "explainableacd"
version = "0.1.0"
description = "Explainable Automatic Claim Detection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.2",
    "marimo>=0.18.4",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["N807", "N803"]
"experiments/scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "mlflow.*",
    "polars.*",
    "plotly.*",
    "sklearn.*",
    "joblib.*",
    "pyarrow.*",
    "sentence_transformers.*"
]
ignore_missing_imports = true
